@@ -1,5 +1,5 @@
 
-===== Revision history of Mail::Transport version 3.*
+===== Revision history of Mail-Transport
 
 All changes are made by Mark Overmeer <markov@cpan.org> unless
 explicitly stated differently.
@@ -8,6 +8,7 @@ version 3.003:
 
 	Fixes:
 	- fix metadata [Mohammad S Anwar]
+	- add pod testing
 
 version 3.002: Wed 24 Jan 16:02:02 CET 2018
 
